@@ -10,11 +10,19 @@ description: >
     
 #
 #
-#  You MUST retain spacing in the texts.
+#         You MUST retain spacing in the texts.
 #  If a text begins with a space, it must remain that way.
-# If it ends with a space, it must remain that way.
+#    If it ends with a space, it must remain that way.
 #
 #
+# %s = data to be supplied by the plugin.
+
+# Text colouring
+#
+# Black = &0, Navy = &1, Green = &2, Blue = &3, Red = &4
+# Purple = &5, Gold = &6, LightGray = &7, Gray = &8
+# DarkPurple = &9, LightGreen = &a, LightBlue = &b
+# Rose = &c, LightPurple = &d, Yellow = &e, White = &f
 
 ############################################################
 # +------------------------------------------------------+ #
@@ -63,7 +71,6 @@ town_help_7: 'New town with target mayor.'
 town_help_8: 'List commands for mayors.'
 town_help_9: 'Today''s the day!'
 
-mayor_help_2: 'Claim this town block'
 mayor_help_3: 'Claim area not attached to town'
 mayor_help_4: 'Claim around you to a radius of X'
 mayor_help_5: 'Claim to the maximum radius'
@@ -134,14 +141,16 @@ admin_panel_1: 'Admin panel'
 admin_panel_2: 'reload Towny'
 admin_panel_3: 'Run the new day code'
 
+msg_block_claim: 'Claim this town block'
+msg_plot_nfs: 'Take down a plot for sale'
+msg_nfs_abr: '&e''nfs'' is an accepted abreviation for ''notforsale''.'
+msg_plot_fs: 'Put this area up for auction.'
+
 ############################################################
 # +------------------------------------------------------+ #
 # |   Messages   | #
 # +------------------------------------------------------+ #
 ############################################################
-
-
-# %s = data to be supplied by the plugin.
 
 unclaimed_plot_name: 'Unowned'
 unclaimed_zone_name: 'Wilderness'
@@ -196,73 +205,58 @@ msg_invited: '&bYou''ve been invited to join %s.'
 
 msg_allied_nations: '&b%s allied with the nations %s.'
 msg_broke_alliance: '&b%s broke their alliance with the nations %s.'
-
 msg_enemy_nations: '&b%s developed a hatred for the nations %s.'
 msg_enemy_to_neutral: '&b%s has changed it''s status to neutral towards %s.'
-
 msg_added_ally: '&b%s allied with your nation.'
 msg_removed_ally: '&b%s canceled the alliance with your nation.'
-
 msg_added_enemy: '&b%s has developed a hatred towards your nation.'
 msg_removed_enemy: '&b%s has become peaceful towards your nation.'
 
-msg_block_claim: 'Claim this town block'
-msg_plot_nfs: 'Take down a plot for sale'
-msg_nfs_abr: '''nfs'' is an accepted abreviation for ''notforsale''.'
-msg_plot_fs: 'Put this area up for auction.'
-msg_claimed: '&bSuccessfully claimed'
-msg_unclaimed: '&bSuccessfully unclaimed'
-msg_not_claimable: '&bThis world is not claimable.'
-msg_err_rect_auto: '&bOnly towns can use auto.'
-msg_err_invalid_radius: '&bInvalid radius. Use an integer or ''auto''.'
+msg_claimed: '&2Successfully claimed'
+msg_unclaimed: '&2Successfully unclaimed'
+msg_not_claimable: '&cThis world is not claimable.'
 msg_abandoned_area: '&bAbandoned area %s'
-msg_admin_unclaim_area: '&bForcefully unclaimed area  %s'
+msg_admin_unclaim_area: '&cForcefully unclaimed area  %s'
 msg_abandoned_area_1: '&bYour town abadoned the area'
-msg_not_town: '&bSelected area is not part of your town.'
-msg_no_money_purchase_plot: '&bYou don''t have enough money to purchase this plot.'
-msg_town_no_money_purchase_plot: '&bThe town doesn''t have enough money to purchase back this plot.'
-msg_no_funds_new_town: '&b%s can''t afford to settle a new town here.'
-msg_no_funds_claim: '&bTown cannot afford to claim %s  town blocks costing %s. Add more money into the town bank.'
-msg_annexed_area: '&bAnnexed area %s'
-msg_max_plot_own: '&bYou cannot own more than %s plots.'
-msg_no_funds_new_nation: '&bThe town can''t afford to start a new nation.'
-msg_already_claimed: '&bThis area has already been claimed by: %s'
-msg_already_claimed_1: '&bThis area (%s) already belongs to someone.'
-msg_already_claimed_2: '&bThis area has already been claimed.'
-msg_too_close: '&bThis area is too close to another town.'
+msg_not_town: '&cSelected area is not part of your town.'
+msg_no_money_purchase_plot: '&cYou don''t have enough money to purchase this plot.'
+msg_town_no_money_purchase_plot: '&cThe town doesn''t have enough money to purchase back this plot.'
+msg_no_funds_new_town: '&c%s can''t afford to settle a new town here.'
+msg_no_funds_claim: '&cTown cannot afford to claim %s  town blocks costing %s. Add more money into the town bank.'
+msg_annexed_area: '&2Annexed area %s'
+msg_max_plot_own: '&cYou cannot own more than %s plots.'
+msg_no_funds_new_nation: '&cThe town can''t afford to start a new nation.'
+msg_already_claimed: '&cThis area has already been claimed by: %s'
+msg_already_claimed_1: '&cThis area (%s) already belongs to someone.'
+msg_already_claimed_2: '&cThis area has already been claimed.'
+msg_too_close: '&cThis area is too close to another town.'
 msg_not_claimed: '&bThis area (%s) hasn''t been claimed.'
 msg_not_claimed_1: '&bThis area had not been claimed.'
-msg_err_plot_nfs: '&bThis plot is not for sale.'
-msg_err_not_part_town: '&bSelected area is not part of your town.'
-msg_err_not_attached_edge: '&bSelected area not attached to edge.'
-msg_err_not_enough_blocks: '&bNot enough available town blocks to claim this selection.'
-msg_err_cant_afford_blocks: '&bTown cannot afford to claim %s town blocks costing %s'
-msg_err_not_in_town_claim: '&bYou must belong to a town in order to claim plots.'
-msg_err_must_belong_town: '&bYou must belong to a town.'
-msg_err_dont_belong_town: '&bYou don''t belong to a town.'
-msg_err_dont_belong_nation: '&bYou don''t belong to a nation.'
-msg_not_own_area: '&bYou do not own the selected area.'
+msg_not_own_area: '&cYou do not own the selected area.'
 msg_not_own_place: '&bThis place is not owned by anyone.'
-msg_area_not_own: '&bThis area does not belong to you.'
-msg_area_not_recog: '&bThis area isn''t recognized by Towny.'
+msg_area_not_own: '&cThis area does not belong to you.'
+msg_area_not_recog: '&cThis area isn''t recognized by Towny.'
 msg_specify_name: '&bSpecify town name'
 msg_specify_nation_name: '&bSpecify nation name'
 msg_peasant_right: '&bA peasant hasn''t the right to force his leaders into the throne.'
-msg_err_town_spawn_forbidden: '&bTown spawn travel is forbidden.'
-msg_err_cant_afford_tp: '&bCannot afford to teleport to your town''s spawn.'
 msg_cost_spawn: '&bYou were charged %s to teleport to the town''s spawn.'
-msg_err_cant_afford_tp_town: '&bCannot afford to teleport to %s.'
-msg_err_not_public: '&bThat town is not public.'
 msg_town_rename_disabled: '&bTown Renaming Disabled'
+msg_town_set_name: '&b%s renamed town to %s.'
+msg_nation_set_name: '&b%s renamed nation to %s.'
+msg_changed_pvp: '&cTown PVP has been %s.'
+msg_world_pvp: '&cThis world is PvP only.'
+msg_reloaded: '&2Towny''s settings were reloaded.'
+msg_give_total: '&bGave %s bonus. (Total: %s)'
+mag_backup_success: '&2Backup successful.'
+msg_xx_withdrew_xx: '&b%s withdrew %s from the %s bank.'
+msg_xx_deposited_xx: '&b%s deposited %s into the %s bank.'
+msg_insuf_funds: '&cYou don''t have that much.'
 
 msg_set_town_home: '&bSuccessfully changed town''s home block to %s'
 msg_set_town_spawn: '&bSuccessfully changed town''s spawn.'
 msg_set_town_public: '&bSuccessfully set town Public: %s'
 msg_set_town_expl: '&bSuccessfully set town Explosions: %s'
 msg_set_perms: '&bSuccessfully changed permissions to %s.'
-
-msg_changed_pvp: 'Town PVP has been %s.'
-
 msg_set_claim: '&bSuccessfully changed %s''s claimability to %s'
 msg_set_pvp: '&bSuccessfully changed %s''s PvP to %s'
 msg_usedefault: '&bThis world (%s) is now using the global default settings.'
@@ -270,12 +264,7 @@ msg_set_wild_perms: '&bSuccessfully changed %s''s wild permissions %s'
 msg_set_wild_ignore: '&bSuccessfully changed %s''s wild ignore blocks to %s'
 msg_set_wild_name: '&bSuccessfully changed %s''s wild name to %s'
 msg_set_use_towny_on: '&bThis world now follows towny rules.'
-msg_set_use_towny_off: '&bThis world is exempt of all towny interactions.'
-
-msg_town_set_name: '&b%s renamed town to %s.'
-msg_nation_set_name: '&b%s renamed nation to %s.'
-
-msg_world_pvp: '&bThis world is PvP only.'
+msg_set_use_towny_off: '&cThis world is exempt of all towny interactions.'
 
 msg_error_must_be_int: '&bAmount must be an integer.'
 msg_must_specify_amnt: '&bMust specify amount. Eg: %s withdraw 54'
@@ -292,56 +281,64 @@ msg_new_mayor: '&b%s is now the mayor!'
 msg_new_nation: '&b%s created a new nation called %s'
 msg_new_town: '&b%s created a new town called %s'
 msg_plot_for_sale: '&b%s put the plot (%s) up for sale!'
-msg_registration: 'Welcome %s to the server!'
-msg_registration_old: 'Welcome this is your first login.@You''ve successfully been registered!@Try the /towny command for more help.'
+msg_registration: '&eWelcome %s to the server!'
+msg_registration_old: '&eWelcome this is your first login.@You''ve successfully been registered!@Try the /towny command for more help.'
 msg_war_eliminated: '&6[War] &b%s was eliminated from the war.'
 msg_war_forfeited: '&6[War] &b%s forfeited.'
 msg_war_join: '&6[War] &b%s joined the fight!'
 msg_war_lose_block: '(%s) belonging to %s has fallen.'
 msg_war_score: '&6[War] &b%s scored %d points!'
-msg_war_cannot_do: 'You cannot do this when the world is at war.'
-msg_war_in_progress: 'War already in progress.'
-msg_war_started: 'Started the war countdown.'
-msg_war_ended: 'Ended the current war.'
+msg_war_cannot_do: '&cYou cannot do this when the world is at war.'
+msg_war_in_progress: '&cWar already in progress.'
+msg_war_started: '&eStarted the war countdown.'
+msg_war_ended: '&eEnded the current war.'
+
+msg_cache_block_error: '&cYou have not been registered with Towny. Try relogging.'
+msg_cache_block_error_wild: '&cNot allowed to %s in the wild.'
+msg_cache_block_error_plot: '&cOwner doesn''t allow %s to %s here.'
+msg_cache_block_error_town_resident: '&cResidents aren''t allowed to %s here.'
+msg_cache_block_error_town_allies: '&cAllies aren''t allowed to %s.'
+msg_cache_block_error_town_outsider: '&cOutsiders aren''t allowed to %s.'
+
+msg_err_cant_afford_tp_town: '&cCannot afford to teleport to %s.'
+msg_err_not_public: '&cThat town is not public.'
+msg_err_town_spawn_forbidden: '&cTown spawn travel is forbidden.'
+msg_err_cant_afford_tp: '&bCannot afford to teleport to your town''s spawn.'
+msg_err_plot_nfs: '&cThis plot is not for sale.'
+msg_err_not_part_town: '&cSelected area is not part of your town.'
+msg_err_not_attached_edge: '&cSelected area not attached to edge.'
+msg_err_not_enough_blocks: '&cNot enough available town blocks to claim this selection.'
+msg_err_cant_afford_blocks: '&cTown cannot afford to claim %s town blocks costing %s'
+msg_err_not_in_town_claim: '&cYou must belong to a town in order to claim plots.'
+msg_err_must_belong_town: '&cYou must belong to a town.'
+msg_err_dont_belong_town: '&cYou don''t belong to a town.'
+msg_err_dont_belong_nation: '&bYou don''t belong to a nation.'
+msg_err_rect_auto: '&cOnly towns can use auto.'
+msg_err_invalid_radius: '&cInvalid radius. Use an integer or ''auto''.'
+msg_err_not_configured: '&cThis world has not been configured by Towny.'
+msg_err_updating_item_perms: '&cError updating item use permissions cache.'
+msg_err_updating_switch_perms: '&cError updating switch permissions cache.'
+msg_err_updating_destroy_perms: '&cError updating destroy permissions cache.'
+msg_err_updating_build_perms: '&cError updating build permissions cache.'
+msg_err_admin_only: '&cOnly an admin can use this command.'
+msg_err_admin_only_delete: '&cOnly an admin can delete other resident data.'
+msg_err_admin_only_delete_town: '&cOnly an admin can delete other town data.'
+msg_err_admin_only_delete_nation: '&cOnly an admin can delete other nation data.'
+msg_err_not_registered: '&cYou are not registered'
+msg_err_not_registered_1: '&c%s is not registered'
+msg_err_invalid_name: '&c%s is an invalid name.'
+msg_err_already_res: '&c%s already belongs to a town.'
+msg_err_already_nation: '&cTarget town already belongs to a nation.'
+msg_err_invalid_property: '&cInvalid %s property.'
+msg_err_not_supported: '&cNot yet supported.'
+msg_err_invalid_input: '&cInvalid input. Use %s'
+msg_err_invalid_choice: '&cInvalid choice'
+msg_err_invalid_sub: '&cInvalid sub command.'
+msg_err_universe_limit: '&cThe universe cannot hold any more towns.'
+msg_err_too_many_npc: '&cToo many npc''s registered.'
+msg_err_negative_money: '&cNegative money is stupid. Weirdo.'
 
 # these messages are only used if town/nation creation is set to admins only
 
-msg_admin_only_create_nation: '&bOnly admins are allowed to create nations.'
-msg_admin_only_create_town: '&bOnly admins are allowed to create towns.'
-
-msg_cache_block_error: '&bYou have not been registered with Towny. Try relogging.'
-msg_cache_block_error_wild: '&bNot allowed to %s in the wild.'
-msg_cache_block_error_plot: '&bOwner doesn''t allow %s to %s here.'
-msg_cache_block_error_town_resident: '&bResidents aren''t allowed to %s here.'
-msg_cache_block_error_town_allies: '&bAllies aren''t allowed to %s.'
-msg_cache_block_error_town_outsider: '&bOutsiders aren''t allowed to %s.'
-
-msg_err_not_configured: '&bThis world has not been configured by Towny.'
-msg_err_updating_item_perms: '&bError updating item use permissions cache.'
-msg_err_updating_switch_perms: '&bError updating switch permissions cache.'
-msg_err_updating_destroy_perms: '&bError updating destroy permissions cache.'
-msg_err_updating_build_perms: '&bError updating build permissions cache.'
-msg_err_admin_only: '&bOnly an admin can use this command.'
-msg_err_admin_only_delete: '&bOnly an admin can delete other resident data.'
-msg_err_admin_only_delete_town: '&bOnly an admin can delete other town data.'
-msg_err_admin_only_delete_nation: '&bOnly an admin can delete other nation data.'
-msg_err_not_registered: '&bYou are not registered'
-msg_err_not_registered_1: '&b%s is not registered'
-msg_err_invalid_name: '&b%s is an invalid name.'
-msg_err_already_res: '&b%s already belongs to a town.'
-msg_err_already_nation: '&bTarget town already belongs to a nation.'
-msg_err_invalid_property: '&bInvalid %s property.'
-msg_err_not_supported: '&bNot yet supported.'
-msg_err_invalid_input: '&bInvalid input. Use %s'
-msg_err_invalid_choice: '&bInvalid choice'
-msg_err_invalid_sub: '&bInvalid sub command.'
-msg_err_universe_limit: '&bThe universe cannot hold any more towns.'
-msg_err_too_many_npc: '&bToo many npc''s registered.'
-msg_reloaded: '&bTowny''s settings were reloaded.'
-msg_give_total: '&bGave %s bonus. (Total: %s)'
-mag_backup_success: '&bBackup successful.'
-
-msg_err_negative_money: '&bNegative money is stupid. Weirdo.'
-msg_xx_withdrew_xx: '&b%s withdrew %s from the %s bank.'
-msg_xx_deposited_xx: '&b%s deposited %s into the %s bank.'
-msg_insuf_funds: '&bYou don''t have that much.'
+msg_admin_only_create_nation: '&cOnly admins are allowed to create nations.'
+msg_admin_only_create_town: '&cOnly admins are allowed to create towns.'
